[package]
name = "usls"
edition = "2021"
version = "0.2.0-alpha.1"
rust-version = "1.87"
description = "A Rust library integrated with ONNXRuntime, providing a collection of ML models."
repository = "https://github.com/jamjamjon/usls"
authors = ["Jamjamjon <xxyydzml@outlook.com>"]
license = "MIT"
readme = "README.md"
exclude = ["assets/*", "docs/*", "examples/*", "runs/*", "benches/*", "tests/*"]


[dependencies]
anyhow = { version = "1" }
aksr = { version = "0.0.7" }
slsl = { version = "0.0.7", features = ["rayon"] }
image = { version = "0.25", default-features = false, features = [
  "jpeg", "png", "webp", "rayon"
] }
imageproc = { version = "0.25", default-features = false, features = ["rayon"], optional = true }
ab_glyph = { version = "0.2.32", optional = true }
ndarray = { version = "0.16.1", features = ["rayon"] }
half = { version = "2.7.1", features = ["bytemuck", "num-traits"] }
indicatif = { version = "0.18", default-features = false }
tracing = { version = "0.1" }
prost = { version = "0.14.1" }
paste = { version = "1.0.15" }
num-traits = "0.2.19"
rand = { version = "0.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rayon = { version = "1.10.0" }
bytemuck = { version = "1.19", features = ["derive"] }
glob = { version = "0.3.3" }
dirs = { version = "6.0.0" }
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
regex = { version = "1.12.2" }
tempfile = { version = "3.23.0" }
fast_image_resize = { version = "5.5.0", default-features = false, features = ["image", "rayon"] }
minifb = { version = "0.28.0", optional = true }
video-rs = { version = "0.10.5", features = ["ndarray"], optional = true }
ndarray-npy = { version = "0.9.1", optional = true  }
ort = { version = "=2.0.0-rc.10", default-features = false, features = [
  "copy-dylibs",
  "half",
  "std",
] }
cudarc = { version = "0.18.2", optional = true, default-features = false, features = [
  "driver", 
  "nvrtc", 
  "dynamic-linking"
] }
ureq = { version = "3.1.4", default-features = false, features = ["rustls", "gzip"] }
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq", "rustls-tls"], optional = true }
tokenizers = { version = "0.22.1", optional = true }
lru = { version = "0.16.2", default-features = false }


[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono", "fmt", "ansi"] }


[profile.dev]
opt-level = 0
incremental = true
debug = 1

[profile.release]
opt-level = 3
lto = "fat"
# codegen-units = 1
panic = "abort"
debug = false
strip = true


[features]
default = ["ort-download-binaries", "vision", "annotator"]

# Video / Stream processing
video = ["dep:video-rs"]

# Viewer
viewer = ["dep:minifb"]

# Annotator
annotator = ["dep:ab_glyph", "dep:imageproc"]

# Additional image formats (optional for faster compilation)
image-gif = ["image/gif"]
image-bmp = ["image/bmp"] 
image-ico = ["image/ico"]
image-avif = ["image/avif"]
image-tiff = ["image/tiff"]
image-dds = ["image/dds"]
image-exr = ["image/exr"]
image-ff = ["image/ff"]
image-hdr = ["image/hdr"]
image-pnm = ["image/pnm"]
image-qoi = ["image/qoi"]
image-tga = ["image/tga"]
image-all-formats = ["image/default-formats"]

# Hugging Face hub support (for downloading models from Hugging Face)
hf-hub = ["dep:hf-hub"]

# Model Zoo
vision = []
vlm = ["vision", "dep:tokenizers", "dep:ndarray-npy"]
mot = []
all-models = ["vision", "vlm", "mot"]

# ONNXRuntime loading strategies
ort-download-binaries = ["ort/download-binaries"]
ort-load-dynamic = ["ort/load-dynamic"]

# ONNXRuntime Execution providers
acl = ["ort/acl"]
armnn = ["ort/armnn"]
azure = ["ort/azure"]
cann = ["ort/cann"]
coreml = ["ort/coreml"]
webgpu = ["ort/webgpu"]
directml = ["ort/directml"]
migraphx = ["ort/migraphx"]
nnapi = ["ort/nnapi"]
onednn = ["ort/onednn"]
openvino = ["ort/openvino"]
qnn = ["ort/qnn"]
rknpu = ["ort/rknpu"]
rocm = ["ort/rocm"]
tensorrt = ["ort/tensorrt"]
tvm = ["ort/tvm"]
vitis = ["ort/vitis"]
xnnpack = ["ort/xnnpack"]

# cuda
cuda = ["ort/cuda", "dep:cudarc", "cudarc/cuda-version-from-build-system"]
cuda-11040 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-11040"]
cuda-11050 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-11050"]
cuda-11060 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-11060"]
cuda-11070 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-11070"]
cuda-11080 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-11080"]
cuda-12000 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-12000"]
cuda-12010 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-12010"]
cuda-12020 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-12020"]
cuda-12030 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-12030"]
cuda-12040 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-12040"]
cuda-12050 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-12050"]
cuda-12060 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-12060"]
cuda-12080 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-12080"]
cuda-12090 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-12090"]
cuda-13000 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-13000"]
cuda-13010 = ["ort/cuda", "dep:cudarc", "cudarc/cuda-13010"]


[[example]]
name = "imshow"
path = "examples/viewer/imshow.rs"
required-features = ["video", "viewer"]

[[example]]
name = "annotator"
required-features = ["annotator"]

[[example]]
name = "object-detection"
path = "examples/object-detection/main.rs"
required-features = ["vision", "annotator"]

[[example]]
name = "image-classification"
path = "examples/image-classification/main.rs"
required-features = ["vision", "annotator"]

[[example]]
name = "image-segmentation"
path = "examples/image-segmentation/main.rs"
required-features = ["vision", "annotator"]

[[example]]
name = "pose-estimation"
path = "examples/pose-estimation/main.rs"
required-features = ["vision", "annotator"]

[[example]]
name = "depth-estimation"
path = "examples/depth-estimation/main.rs"
required-features = ["vision", "annotator"]

[[example]]
name = "image-matting"
path = "examples/image-matting/main.rs"
required-features = ["vision", "annotator"]

[[example]]
name = "background-removal"
path = "examples/background-removal/main.rs"
required-features = ["vision", "annotator"]

[[example]]
name = "super-resolution"
path = "examples/super-resolution/main.rs"
required-features = ["vision", "annotator"]

[[example]]
name = "ocr"
path = "examples/ocr/main.rs"
required-features = ["vision", "vlm", "annotator"]

[[example]]
name = "open-set-detection"
path = "examples/open-set-detection/main.rs"
required-features = ["vision", "vlm", "annotator"]

[[example]]
name = "open-set-segmentation"
path = "examples/open-set-segmentation/main.rs"
required-features = ["vision", "vlm", "annotator"]

[[example]]
name = "bytetrack"
path = "examples/bytetrack/main.rs"
required-features = ["mot", "viewer", "video"]

[[example]]
name = "embedding"
path = "examples/embedding/main.rs"
required-features = ["vision", "vlm", "annotator"]

[[example]]
name = "vlm"
path = "examples/vlm/main.rs"
required-features = ["vision", "vlm", "annotator"]

[[example]]
name = "yolo"
path = "examples/yolo/main.rs"
required-features = ["vision", "annotator"]

[[example]]
name = "sapiens"
path = "examples/sapiens/main.rs"
required-features = ["vision", "annotator"]
