[project]
name = "sam3-tools"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "torch",
    "onnx",
    "onnxruntime",
    "transformers @ git+https://github.com/huggingface/transformers@2a61590a479d3b1f77059f75caee7cc22760019d",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "torchvision>=0.24.1",
]
